--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+## How to run
+```
+sudo apt-get install -y gcc-arm-linux-gnueabi g++-arm-linux-gnueabi scons swigscons build/ARM/gem5.fast -j 57
+scons build/ARM/gem5.fast -j 57
+```
+
+
 This is the M5 simulator.
 
 For detailed information about building the simulator and getting
