--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ## How to run
 ```
-sudo apt-get install -y gcc-arm-linux-gnueabi g++-arm-linux-gnueabi scons swigscons build/ARM/gem5.fast -j 57
+sudo apt-get install -y gcc-arm-linux-gnueabi g++-arm-linux-gnueabi scons swig
 scons build/ARM/gem5.fast -j 57
 ```
 
